--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,4 +15,11 @@
         <item name ="android:layout_marginTop">20dp</item>
     </style>
 
+    <style name ="results">
+        <item name ="android:textSize">20sp</item>
+        <item name ="android:layout_marginLeft">16dp</item>
+        <item name ="android:layout_marginTop">8dp</item>
+        <item name ="android:layout_marginBottom">8dp</item>
+    </style>
+
 </resources>
